# client-report-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sample_client.json
reports/templates/: sample_report.docx
scripts/: create_sample_template.py
src/api/: __init__.py  main.py  models.py  storage.py
src/api/static/: app.js  index.html  styles.css
src/client_reports/: __init__.py  cli.py  pdf.py  renderer.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_pdf.py  test_renderer.py
